# TradeEngine

./: .clang-format  .gitignore  CMakeLists.txt  README.md
Common/: CMakeLists.txt  ConsoleFileLogger.cpp  ConsoleFileLogger.h  db_classes.cpp  db_classes.hpp  db_session.cpp  db_session.hpp  db_sessionwrapper.h  db_traits.cpp  db_types.cpp  db_types.hpp
DataTypes/: BookEntry.h
ExchangeRelay/: BinanceWebSocketClient.h  BitfinexWebSocketClient.h  CMakeLists.txt  CoinbaseWebSocketClient.h  KrakenWebSocketClient.h  WebSocketClient.h  main.cpp
Fix8-compiled/: CMakeLists.txt  db_classes.hpp  db_session.cpp  db_session.hpp  db_traits.cpp  db_types.hpp
ReplayClient/: CMakeLists.txt  main.cpp
ReplayClient/config/: replay_client.xml
ReplayClient/src/: ReplayClient.cpp  ReplayClient.h  main.cpp
ReplayServer/: CMakeLists.txt
ReplayServer/config/: FIX42.xml  replay_server.xml
ReplayServer/src/: ReplayServer.cpp  ReplayServer.h  main.cpp
ReplayServer/src/f8c/: db_classes.cpp  db_classes.hpp  db_router.hpp  db_session.hpp  db_types.cpp
Utils/: CMakeLists.txt  SignalHandler.h
